Make number of QA pairs configurable in sft_config.yaml

--- a/config/sft_config.yaml
+++ b/config/sft_config.yaml
@@ -13,6 +13,7 @@ generation:
   temperature: 0.0  # Crucial: 0.0 minimizes hallucination in 20B models
   top_p: 0.9
   max_tokens: 4096
+  num_pairs: 3      # Number of QA pairs to generate per topic
 
 prompts:
   summary: |
